--- a/doc/agile/v1/sprint_backlog_17.org
+++ b/doc/agile/v1/sprint_backlog_17.org
@@ -12,26 +12,26 @@
 
 ** Active
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-05-13 Mon 08:18]
+#+CAPTION: Clock summary at [2019-05-13 Mon 09:10]
 | <75>                                                       |         |       |       |       |
 | Headline                                                   | Time    |       |       |     % |
 |------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                               | *43:54* |       |       | 100.0 |
+| *Total time*                                               | *44:11* |       |       | 100.0 |
 |------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                    | 43:54   |       |       | 100.0 |
-| Active                                                     |         | 43:54 |       | 100.0 |
+| Stories                                                    | 44:11   |       |       | 100.0 |
+| Active                                                     |         | 44:11 |       | 100.0 |
 | Edit release notes for previous sprint                     |         |       |  2:41 |   6.1 |
-| Create a video demo for the previous sprint's features     |         |       |  2:11 |   5.0 |
-| Sprint and product backlog grooming                        |         |       |  1:10 |   2.7 |
+| Create a video demo for the previous sprint's features     |         |       |  2:11 |   4.9 |
+| Sprint and product backlog grooming                        |         |       |  1:10 |   2.6 |
 | Defining profiles directly on a target model does not work |         |       |  0:30 |   1.1 |
 | Inner modules need to be qualified                         |         |       |  0:22 |   0.8 |
-| Create namespaces for model elements                       |         |       |  8:59 |  20.5 |
+| Create namespaces for model elements                       |         |       |  8:59 |  20.3 |
 | Leaves in internal modules are not captured correctly      |         |       |  1:33 |   3.5 |
 | Try to add relational tracing support                      |         |       |  2:51 |   6.5 |
-| Linux and OSX binaries are not stripped                    |         |       |  1:23 |   3.2 |
+| Linux and OSX binaries are not stripped                    |         |       |  1:23 |   3.1 |
 | Fix issues with nightly build and CI                       |         |       |  0:05 |   0.2 |
-| Initial analysis to code generate feature infrastructure   |         |       |  7:13 |  16.4 |
-| Replace JSON based feature templates with generated code   |         |       | 14:56 |  34.0 |
+| Initial analysis to code generate feature infrastructure   |         |       |  7:13 |  16.3 |
+| Replace JSON based feature templates with generated code   |         |       | 15:13 |  34.4 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -414,6 +414,7 @@ Notes:
 
 *** STARTED Replace JSON based feature templates with generated code  :story:
     :LOGBOOK:
+    CLOCK: [2019-05-13 Mon 08:53]--[2019-05-13 Mon 09:10] =>  0:17
     CLOCK: [2019-05-12 Sun 21:27]--[2019-05-12 Sun 21:41] =>  0:14
     CLOCK: [2019-05-12 Sun 21:16]--[2019-05-12 Sun 21:26] =>  0:10
     CLOCK: [2019-05-12 Sun 19:09]--[2019-05-12 Sun 19:27] =>  0:18
