--- a/doc/agile/v1/sprint_backlog_17.org
+++ b/doc/agile/v1/sprint_backlog_17.org
@@ -12,14 +12,14 @@
 
 ** Active
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-05-13 Mon 10:14]
+#+CAPTION: Clock summary at [2019-05-13 Mon 10:18]
 | <75>                                                       |         |       |       |       |
 | Headline                                                   | Time    |       |       |     % |
 |------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                               | *45:10* |       |       | 100.0 |
+| *Total time*                                               | *45:13* |       |       | 100.0 |
 |------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                    | 45:10   |       |       | 100.0 |
-| Active                                                     |         | 45:10 |       | 100.0 |
+| Stories                                                    | 45:13   |       |       | 100.0 |
+| Active                                                     |         | 45:13 |       | 100.0 |
 | Edit release notes for previous sprint                     |         |       |  2:41 |   5.9 |
 | Create a video demo for the previous sprint's features     |         |       |  2:11 |   4.8 |
 | Sprint and product backlog grooming                        |         |       |  1:10 |   2.6 |
@@ -31,7 +31,7 @@
 | Linux and OSX binaries are not stripped                    |         |       |  1:23 |   3.1 |
 | Fix issues with nightly build and CI                       |         |       |  0:05 |   0.2 |
 | Initial analysis to code generate feature infrastructure   |         |       |  7:13 |  16.0 |
-| Replace JSON based feature templates with generated code   |         |       | 16:12 |  35.9 |
+| Replace JSON based feature templates with generated code   |         |       | 16:15 |  35.9 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -412,8 +412,10 @@ Notes:
   initialiser. It calls the registrar with all the features in that
   model.
 
-*** STARTED Replace JSON based feature templates with generated code  :story:
+*** COMPLETED Replace JSON based feature templates with generated code :story:
+    CLOSED: [2019-05-13 Mon 10:18]
     :LOGBOOK:
+    CLOCK: [2019-05-13 Mon 10:15]--[2019-05-13 Mon 10:18] =>  0:03
     CLOCK: [2019-05-13 Mon 10:11]--[2019-05-13 Mon 10:14] =>  0:03
     CLOCK: [2019-05-13 Mon 09:54]--[2019-05-13 Mon 10:10] =>  0:16
     CLOCK: [2019-05-13 Mon 09:33]--[2019-05-13 Mon 09:53] =>  0:20
