--- a/doc/agile/v1/sprint_backlog_17.org
+++ b/doc/agile/v1/sprint_backlog_17.org
@@ -12,27 +12,27 @@
 
 ** Active
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-05-13 Mon 11:53]
+#+CAPTION: Clock summary at [2019-05-13 Mon 14:38]
 | <75>                                                       |         |       |       |       |
 | Headline                                                   | Time    |       |       |     % |
 |------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                               | *46:43* |       |       | 100.0 |
+| *Total time*                                               | *48:48* |       |       | 100.0 |
 |------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                    | 46:43   |       |       | 100.0 |
-| Active                                                     |         | 46:43 |       | 100.0 |
-| Edit release notes for previous sprint                     |         |       |  2:41 |   5.7 |
-| Create a video demo for the previous sprint's features     |         |       |  2:11 |   4.7 |
-| Sprint and product backlog grooming                        |         |       |  1:10 |   2.5 |
-| Defining profiles directly on a target model does not work |         |       |  0:30 |   1.1 |
+| Stories                                                    | 48:48   |       |       | 100.0 |
+| Active                                                     |         | 48:48 |       | 100.0 |
+| Edit release notes for previous sprint                     |         |       |  2:41 |   5.5 |
+| Create a video demo for the previous sprint's features     |         |       |  2:11 |   4.5 |
+| Sprint and product backlog grooming                        |         |       |  1:10 |   2.4 |
+| Defining profiles directly on a target model does not work |         |       |  0:30 |   1.0 |
 | Inner modules need to be qualified                         |         |       |  0:22 |   0.8 |
-| Create namespaces for model elements                       |         |       |  8:59 |  19.2 |
-| Leaves in internal modules are not captured correctly      |         |       |  1:33 |   3.3 |
-| Try to add relational tracing support                      |         |       |  2:51 |   6.1 |
-| Linux and OSX binaries are not stripped                    |         |       |  1:23 |   3.0 |
+| Create namespaces for model elements                       |         |       |  8:59 |  18.4 |
+| Leaves in internal modules are not captured correctly      |         |       |  1:33 |   3.2 |
+| Try to add relational tracing support                      |         |       |  2:51 |   5.8 |
+| Linux and OSX binaries are not stripped                    |         |       |  1:23 |   2.8 |
 | Fix issues with nightly build and CI                       |         |       |  0:05 |   0.2 |
-| Initial analysis to code generate feature infrastructure   |         |       |  7:13 |  15.4 |
-| Replace JSON based feature templates with generated code   |         |       | 16:15 |  34.8 |
-| Make a clear separation between dogen and masd             |         |       |  1:25 |   3.0 |
+| Initial analysis to code generate feature infrastructure   |         |       |  7:13 |  14.8 |
+| Replace JSON based feature templates with generated code   |         |       | 16:15 |  33.3 |
+| Make a clear separation between dogen and masd             |         |       |  3:30 |   7.2 |
 | Update the MASD UML profile to reflect the latest changes  |         |       |  0:05 |   0.2 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
@@ -524,7 +524,8 @@ Notes:
 
 *** STARTED Make a clear separation between dogen and masd            :story:
     :LOGBOOK:
-    CLOCK: [2019-05-13 Mon 12:45]
+    CLOCK: [2019-05-13 Mon 13:56]--[2019-05-13 Mon 14:38] =>  0:42
+    CLOCK: [2019-05-13 Mon 12:45]--[2019-05-13 Mon 13:55] =>  1:10
     CLOCK: [2019-05-13 Mon 11:44]--[2019-05-13 Mon 12:05] =>  0:21
     CLOCK: [2019-05-13 Mon 11:34]--[2019-05-13 Mon 11:37] =>  0:03
     CLOCK: [2019-05-13 Mon 10:19]--[2019-05-13 Mon 11:33] =>  1:14
