--- a/doc/agile/v1/sprint_backlog_17.org
+++ b/doc/agile/v1/sprint_backlog_17.org
@@ -12,14 +12,14 @@
 
 ** Active
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-05-13 Mon 16:15]
+#+CAPTION: Clock summary at [2019-05-13 Mon 16:28]
 | <75>                                                       |         |       |       |       |
 | Headline                                                   | Time    |       |       |     % |
 |------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                               | *50:23* |       |       | 100.0 |
+| *Total time*                                               | *50:35* |       |       | 100.0 |
 |------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                    | 50:23   |       |       | 100.0 |
-| Active                                                     |         | 50:23 |       | 100.0 |
+| Stories                                                    | 50:35   |       |       | 100.0 |
+| Active                                                     |         | 50:35 |       | 100.0 |
 | Edit release notes for previous sprint                     |         |       |  2:41 |   5.3 |
 | Create a video demo for the previous sprint's features     |         |       |  2:11 |   4.3 |
 | Sprint and product backlog grooming                        |         |       |  1:10 |   2.3 |
@@ -27,12 +27,12 @@
 | Inner modules need to be qualified                         |         |       |  0:22 |   0.7 |
 | Create namespaces for model elements                       |         |       |  8:59 |  17.8 |
 | Leaves in internal modules are not captured correctly      |         |       |  1:33 |   3.1 |
-| Try to add relational tracing support                      |         |       |  2:51 |   5.7 |
+| Try to add relational tracing support                      |         |       |  2:51 |   5.6 |
 | Linux and OSX binaries are not stripped                    |         |       |  1:23 |   2.7 |
 | Fix issues with nightly build and CI                       |         |       |  0:05 |   0.2 |
 | Initial analysis to code generate feature infrastructure   |         |       |  7:13 |  14.3 |
-| Replace JSON based feature templates with generated code   |         |       | 16:15 |  32.3 |
-| Make a clear separation between dogen and masd             |         |       |  5:05 |  10.1 |
+| Replace JSON based feature templates with generated code   |         |       | 16:15 |  32.1 |
+| Make a clear separation between dogen and masd             |         |       |  5:17 |  10.4 |
 | Update the MASD UML profile to reflect the latest changes  |         |       |  0:05 |   0.2 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
@@ -524,6 +524,7 @@ Notes:
 
 *** STARTED Make a clear separation between dogen and masd            :story:
     :LOGBOOK:
+    CLOCK: [2019-05-13 Mon 16:16]--[2019-05-13 Mon 16:28] =>  0:12
     CLOCK: [2019-05-13 Mon 16:05]--[2019-05-13 Mon 16:15] =>  0:10
     CLOCK: [2019-05-13 Mon 14:39]--[2019-05-13 Mon 16:04] =>  1:25
     CLOCK: [2019-05-13 Mon 13:56]--[2019-05-13 Mon 14:38] =>  0:42
