--- a/doc/agile/v1/sprint_backlog_18.org
+++ b/doc/agile/v1/sprint_backlog_18.org
@@ -13,24 +13,24 @@
 
 ** Active
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-05-24 Fri 15:41]
+#+CAPTION: Clock summary at [2019-05-24 Fri 16:21]
 | <75>                                                   |         |       |      |       |
 | Headline                                               | Time    |       |      |     % |
 |--------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                           | *25:27* |       |      | 100.0 |
+| *Total time*                                           | *26:05* |       |      | 100.0 |
 |--------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                | 25:27   |       |      | 100.0 |
-| Active                                                 |         | 25:27 |      | 100.0 |
-| Edit release notes for previous sprint                 |         |       | 3:37 |  14.2 |
-| Create a video demo for the previous sprint's features |         |       | 3:46 |  14.8 |
-| Sprint and product backlog grooming                    |         |       | 1:08 |   4.5 |
-| Make wale templates meta-model elements                |         |       | 2:45 |  10.8 |
-| Flatten the data directory                             |         |       | 1:11 |   4.6 |
+| Stories                                                | 26:05   |       |      | 100.0 |
+| Active                                                 |         | 26:05 |      | 100.0 |
+| Edit release notes for previous sprint                 |         |       | 3:37 |  13.9 |
+| Create a video demo for the previous sprint's features |         |       | 3:46 |  14.4 |
+| Sprint and product backlog grooming                    |         |       | 1:08 |   4.3 |
+| Make wale templates meta-model elements                |         |       | 2:45 |  10.5 |
+| Flatten the data directory                             |         |       | 1:11 |   4.5 |
 | Rename =dogen::cpp::header_only= stereotypes           |         |       | 0:15 |   1.0 |
-| Rename coding model                                    |         |       | 2:17 |   9.0 |
-| Windows build is failing on a number of tests          |         |       | 0:30 |   2.0 |
-| Read variability papers                                |         |       | 0:56 |   3.7 |
-| Add code generation support to static configurations   |         |       | 9:02 |  35.5 |
+| Rename coding model                                    |         |       | 2:17 |   8.8 |
+| Windows build is failing on a number of tests          |         |       | 0:30 |   1.9 |
+| Read variability papers                                |         |       | 0:56 |   3.6 |
+| Add code generation support to static configurations   |         |       | 9:40 |  37.1 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -382,6 +382,12 @@ templates on a number of tests:
 
 The problem started with the commits done in the PM yesterday.
 
+*** COMPLETED Rename =masd.stitch.wale.text_template=                 :story:
+    CLOSED: [2019-05-24 Fri 16:21]
+
+This field name results in invalid c++ code. We should also check that
+all feature names are validated.
+
 *** STARTED Read variability papers                                   :story:
     :LOGBOOK:
     CLOCK: [2019-05-21 Tue 17:35]--[2019-05-21 Tue 17:45] =>  0:10
@@ -392,6 +398,7 @@ Time spent reading the literature on variability.
 
 *** STARTED Add code generation support to static configurations      :story:
     :LOGBOOK:
+    CLOCK: [2019-05-24 Fri 15:42]--[2019-05-24 Fri 16:20] =>  0:38
     CLOCK: [2019-05-24 Fri 14:17]--[2019-05-24 Fri 15:41] =>  1:24
     CLOCK: [2019-05-24 Fri 13:12]--[2019-05-24 Fri 14:16] =>  1:04
     CLOCK: [2019-05-24 Fri 10:15]--[2019-05-24 Fri 10:57] =>  0:42
@@ -487,10 +494,9 @@ Approach:
 - generate the struct for the static configuration.
 - generate a method to read the struct from a dynamic configuration.
 
-*** STARTED Rename =masd.stitch.wale.text_template=                   :story:
+*** Validate feature template names                                   :story:
 
-This field name results in invalid c++ code. We should also check that
-all feature names are validated.
+We need to ensure the template names are valid identifiers in C++.
 
 *** Move models into the project directory                            :story:
 
